added language options

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
       <button id="button">
         Tell me a joke
       </button>
+      <label class="dropdown-label" ="lang-selector">Choose your language:</label>
+      <select name="Language" id="lang-selector">
+        <option value="">--Please choose your language</option>
+        <option value="german">German</option>
+        <option value="eng">Englisch</option>
+      </select>
       <audio id="audio" controls hidden></audio>
     </div>
     <script src="env.js" async defer></script>
